name:                serv
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/serv#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:

    Serv.Api
    Serv.Common
    Serv.ContentType
    Serv.Header
    Serv.Header.Proxies
    Serv.URI
    Serv.Internal.Api
    Serv.Internal.Header
    Serv.Internal.Header.Name
    Serv.Internal.Header.Serialization
    Serv.Internal.MediaType
    Serv.Internal.Pair
    Serv.Internal.Query
    Serv.Internal.RawText
    Serv.Internal.Rec
    Serv.Internal.Server
    Serv.Internal.Server.Config
    Serv.Internal.Server.Context
    Serv.Internal.Server.Error
    Serv.Internal.Server.Type
    Serv.Internal.URI
    Serv.Internal.Verb
    Serv.Server

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , case-insensitive
                     , containers
                     , either
                     , http-media
                     , http-types
                     , mtl
                     , tagged
                     , text
                     , transformers
                     , wai
  default-language:    Haskell2010

executable test-server
  hs-source-dirs:      app
  main-is:             TestServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , serv
                     , wai
                     , warp
                     , text
  default-language:    Haskell2010

test-suite serv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , serv

                     , HUnit
                     , QuickCheck
                     , tasty
                     , tasty-ant-xml
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , wai
                     , wai-extra

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/serv
