name:                http-kinder
version:             0.1.0.0
synopsis:            Generic kinds and types for working with HTTP
description:
  Types and kinds for describing HTTP requests and responsts.
  .
  See the README for more details.
homepage:            http://github.com/tel/serv#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Abrahamson <me@jspha.com>
maintainer:          me@jspha.com
copyright:           2015 Joseph Abrahamson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:

    Network.HTTP.Kinder
    Network.HTTP.Kinder.Common
    Network.HTTP.Kinder.Header
    Network.HTTP.Kinder.Header.Definitions
    Network.HTTP.Kinder.Header.Serialization
    Network.HTTP.Kinder.MediaType
    Network.HTTP.Kinder.Query
    Network.HTTP.Kinder.Status
    Network.HTTP.Kinder.URI
    Network.HTTP.Kinder.Verb

  build-depends:       base >= 4.7 && < 5

                     , aeson
                     , bytestring
                     , case-insensitive
                     , containers
                     , http-media
                     , http-types
                     , singletons
                     , text
                     , time

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tel/serv
