name:                serv
version:             0.2.0.0
synopsis:            Dependently typed API framework
description:
  Types and kinds for describing APIs.
  .
  This package defines the kind 'Serv.Api.Api' which classifies types which
  statically describe an API. Define your 'Serv.Api.Api'-kinded types and then
  write/derive compliant servers, clients, and documentation all statically
  guaranteed to match.
  .
  Import "Serv.Api.Prelude" for the smoothest experience defining these types.
  .
  See the README for more details.

homepage:            http://github.com/tel/serv#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Abrahamson <me@jspha.com>
maintainer:          me@jspha.com
copyright:           2015 Joseph Abrahamson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:

    Serv.Api
    Serv.Api.Analysis
    Serv.Api.Prelude

  build-depends:       base >= 4.7 && < 5

                     , containers
                     , http-kinder
                     , singletons
                     , text

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tel/serv
